# action-ledger

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  board.test.ts  board.ts  styles.css  taskContent.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  desktop.md  mcp-tools.md  reminders-sync.md  workspace-format.md
examples/sample-workspace/: config.yaml
examples/sample-workspace/projects/: project_demo_communication.md  project_demo_work_ops.md
examples/sample-workspace/tasks/doing/: task_demo_work_adr.md
examples/sample-workspace/tasks/done/: task_demo_week_0_setup.md
examples/sample-workspace/tasks/inbox/: task_demo_admin.md
examples/sample-workspace/tasks/next/: task_demo_movie_watchlist.md  task_demo_week_1_memo.md  task_demo_week_2_diagram.md
examples/sample-workspace/tasks/waiting/: task_demo_feedback.md
