[package]
name = "action-ledger-desktop"
version = "0.1.0"
description = "Native dashboard for Action Ledger"
authors = ["Action Ledger contributors"]
edition = "2021"

[lib]
name = "action_ledger_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "action-ledger-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
